k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: judge-engine
  labels:
    app: judge-engine
