k8s/submission-service.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: submission-service
  namespace: judge-engine
  labels:
    app: submission-service
spec:
  selector:
    matchLabels:
      app: submission-service
  replicas: 1
  template:
    metadata:
      labels:
        app: submission-service
    spec:
      containers:
        - name: submission-service
          image: submission-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: submission-service
  namespace: judge-engine
  labels:
    app: submission-service
spec:
  selector:
    app: submission-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
